compiler/testData/cli/jvm/languageVersion.out
compiler/testData/cli/jvm/languageVersion.kt:8:7: error: unexpected tokens (use ';' to separate expressions on the same line)
    ""::class.isInstance(42)
      ^
compiler/testData/cli/jvm/languageVersion.kt:5:17: error: cannot access '<init>': it is private in 'Base'
class Derived : Base()
                ^
compiler/testData/cli/jvm/languageVersion.kt:5:17: error: this type is sealed, so it can be inherited by only its own nested classes or objects
class Derived : Base()
                ^
compiler/testData/cli/jvm/languageVersion.kt:8:5: error: the feature is only available since Kotlin 1.1: bound callable references
    ""::class.isInstance(42)
    ^
compiler/testData/cli/jvm/languageVersion.kt:8:15: error: unresolved reference: isInstance
    ""::class.isInstance(42)
              ^
COMPILATION_ERROR
